--- a/maku-boot-module/maku-module-iot/pom.xml
+++ b/maku-boot-module/maku-module-iot/pom.xml
@@ -54,6 +54,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+
+        <!-- Swagger 3基础注解 -->
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.2.15</version>
+        </dependency>
     </dependencies>
 
 </project>
